# UMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
XMPToolkit/public/include/: TXMPDocOps.hpp  TXMPIterator.hpp  XMP_Const.h  XMP_IO.hpp
apiTests/: AddingAudioVideoSourceTests.cpp  AddingCustomDataNamespaceTests.cpp  AddingDoViDisplayCustomDataToUMCTests.cpp  AddingFramesToShotsTests.cpp  AddingOutputsToUMCTests.cpp  AddingShotSourcesToShotsTests.cpp  AddingShotsToTracksTests.cpp  AddingSourcesToUMCTests.cpp  AddingTracksToOutputsTests.cpp  AddingVideoFrameTests.cpp  AvailableDisplays.cpp  AvailableDisplays.h  CMakeLists.txt  Display.cpp  Display.h  DisplayExtensionHandler.cpp  DisplayExtensionHandler.h  DoViDisplay.cpp  DoViDisplay.h  DoViDisplayHandler.cpp  DoViDisplayHandler.h  ExtensionHandlerTests.cpp  SerializingSourcesTests.cpp  SetUniqueIDTests.cpp  TestRunner.cpp  TestUtils.cpp  TestUtils.h
apiTests/material/: AddingAudioSource.xml  AddingFrames.xml  AddingImageSource.xml  AddingMultipleVideoSources.xml  AddingOutputs.xml  AddingShotSources.xml  AddingShots.xml  AddingSources.xml  AddingTracks.xml  AddingVideoFrameSource.xml  AddingVideoSource.xml  AudioTrackBuffer.xml  ClipShotBuffer.xml  FrameBuffer.xml  OuputBuffer.xml  OutputBuffer.xml  ShotBuffer.xml  ShotSourcesBuffer.xml  TrackBuffer.xml  TransitionShotBuffer.xml  VideoTrackBuffer.xml  garbage.xml
documents/API/: IAudioSource_8h.html  IAudioTrack_8h.html  IAudioTrack_8h_source.html  IClipShot_8h.html  IClipShot_8h_source.html  ICustomDataHandler_8h_source.html  ICustomData_8h_source.html  IFrame_8h.html  IImageSource_8h.html  IImageSource_8h_source.html  IOutput_8h.html  IShotSource_8h.html  IShot_8h.html  ISource_8h.html  ITrack_8h.html  ITransitionShot_8h.html  IUMCNode_8h_source.html  IUMC_8h_source.html  IVideoFrameSource_8h_source.html  IVideoSource_8h.html  IVideoTrack_8h_source.html  RationalType_8h.html  RationalType_8h_source.html  SmartPointers_8h.html  TimeCode_8cpp.js  TimeCode_8h.js  TimeCode_8h_source.html  UMCDefines_8h.html  UMCEnvironment_8h.js  UMCEnvironment_8h_source.html  UMCFwdDeclarations_8h.html  UMCFwdDeclarations_8h_source.html  annotated.html  classUMC_1_1IAudioSource-members.html  classUMC_1_1IAudioSource.html  classUMC_1_1IAudioSource.js  classUMC_1_1IAudioTrack-members.html  classUMC_1_1IClipShot.html  classUMC_1_1IClipShot.js  classUMC_1_1ICustomData.js  (+83 more)
documents/Doxygen/html/: IAudioSource_8h_source.html  ICustomDataHandler_8h.html  ICustomData_8h.html  IFrame_8h_source.html  IOutput_8h_source.html  IShotSource_8h_source.html  IShot_8h_source.html  ISource_8h_source.html  ITrack_8h_source.html  ITransitionShot_8h_source.html  IUMCNode_8h.html  IUMCNode_8h.js  IUMC_8h.html  IUniqueIDGenerator_8h.html  IUniqueIDGenerator_8h_source.html  IVideoFrameSource_8h.html  IVideoSource_8h_source.html  IVideoTrack_8h.html  RationalType_8h.js  SmartPointers_8h_source.html  TimeCode_8cpp.html  TimeCode_8cpp_source.html  TimeCode_8h.html  UMCDefines_8h.js  UMCDefines_8h_source.html  UMCEnvironment_8h.html  UMCFwdDeclarations_8h.js  annotated_dup.js  classUMC_1_1IAudioTrack.html  classUMC_1_1IAudioTrack.js  classUMC_1_1IClipShot-members.html  classUMC_1_1ICustomData-members.html  classUMC_1_1ICustomData.html  classUMC_1_1ICustomDataHandler.js  classUMC_1_1IFrame-members.html  classUMC_1_1IImageSource.html  classUMC_1_1IOutput-members.html  classUMC_1_1IOutput.html  classUMC_1_1IOutput.js  classUMC_1_1IShot-members.html  (+45 more)
documents/Doxygen/rtf/: dir_0fb2101ba02d68f078970216a1fe0334.rtf  dir_59676b0da71fe76c47d244b0589a0cc3.rtf  dir_84a5a5c905ca2a85731c799fef739530.rtf  dir_bf0d964cfe92912168d0d09850d1bb7d.rtf  dir_f832923ad3cb060bc87ad85e68b8a1c3.rtf  refman.rtf
imports/: README.md
imports/cppunit/: CMakeLists.txt
imports/cppunit/include/cppunit/: Portability.h  TestCase.h  config-auto.h
imports/cppunit/include/cppunit/extensions/: TestFixtureFactory.h
imports/cppunit/source/cppunit/: Win32DynamicLibraryManager.cpp
private/: CMakeLists.txt
private/include/: UMCDefines_I.h  UMCFwdDeclarations_I.h
private/include/implHeaders/: AudioSourceImpl.h  AudioTrackImpl.h  ClipShotImpl.h  CustomDataHandlerImpl.h  CustomDataHandlerRegistryImpl.h  FrameImpl.h  ImageSourceImpl.h  NodeImpl.h  OutputImpl.h  ShotImpl.h  ShotSourceImpl.h  SourceImpl.h  TrackImpl.h  TransitionShotImpl.h  UMCImpl.h  UniqueIDAndReferenceTrackerImpl.h  UniqueIDGeneratorImpl.h  VideoFrameSourceImpl.h  VideoSourceImpl.h  VideoTrackImpl.h
private/include/interfaces/: ICustomDataHandlerRegistry.h  INodeI.h  IUMCNodeI.h  IUniqueIDAndReferenceTracker.h
private/include/utils/: UMCAndXMPMapping.h  UMCToRDFConversion.h  Utils.h
private/source/: AudioSourceImpl.cpp  AudioTrackImpl.cpp  ClipShotImpl.cpp  CustomDataHandlerImpl.cpp  CustomDataHandlerRegistryImpl.cpp  FrameImpl.cpp  INodeI.cpp  ImageSourceImpl.cpp  NodeImpl.cpp  OutputImpl.cpp  ShotImpl.cpp  ShotSourceImpl.cpp  SourceImpl.cpp  TrackImpl.cpp  TransitionShotImpl.cpp  UMC.cpp  UMCAndXMPMapping.cpp  UMCImpl.cpp  UMCToRDFConversion.cpp  UniqueIDAndReferenceTrackerImpl.cpp  UniqueIDGeneratorImpl.cpp  Utils.cpp  VideoFrameSourceImpl.cpp  VideoSourceImpl.cpp  VideoTrackImpl.cpp
public/include/: UMCDefines.h  UMCEnvironment.h  UMCFwdDeclarations.h
public/include/baseTypes/: RationalType.h  SmartPointers.h  TimeCode.h
public/include/interfaces/: IAudioSource.h  IAudioTrack.h  (+18 more)
public/source/: TimeCode.cpp
samples/: CMakeLists.txt  CreatingAndSerializingMetadata.cpp
samples/AddingExtensions/: AddingExtension.cpp  CMakeLists.txt  DisplayExtension.cpp  DisplayExtension.h  DisplayExtensionHandler.cpp  DisplayExtensionHandler.h  DoViDisplay.cpp  DoViDisplay.h  DoViDisplayHandler.h
samples/AddingOutputs/: AddingOutputs.cpp  CMakeLists.txt
samples/AddingSources/: AddingSources.cpp  CMakeLists.txt
samples/SampleUtils/include/: SampleUtils.h
samples/SampleUtils/src/: SampleUtils.cpp
source/: CMakeLists.txt  CommonDefines.cmake
source/samples/: CMakeLists.txt
unitTests/: CMakeLists.txt  TestRunner.cpp  TimeCodeTests.cpp  UniqueIDAndReferenceTrackerTests.cpp
(+130 files in other folders)
